improve design and menu structure

--- a/templates/menu.phtml
+++ b/templates/menu.phtml
@@ -1,7 +1,4 @@
-<ul class="nav nav-list">
-<li class="nav-header">Menu</li>
-<li><a href="?c=user&a=home">my Home</a></li>
-<li><a href="?c=application&amp;a=newuser">Sign Up (Add User)</a></li>
-<li><a href="?c=application&amp;a=login">Login</a></li>
-<li><a href="?c=profile&amp;a=list">List All Profiles</a></li>
+<ul class="nav">
+    <li><a href="?c=user&a=home">Dashboard</a></li>
+    <li><a href="?c=profile&amp;a=list">List All Profiles</a></li>
 </ul>
