--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -21,13 +21,8 @@
 <body>
     <div class="navbar navbar-fixed-top navbar-inverse">
         <div class="navbar-inner">
-            <div class="container-fluid">
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-                <a class="brand" href="#"><img src="resources/img/xodx_20.png" alt="Xodx" /></a>
+            <div class="container">
+                <a class="brand"><img src="resources/img/xodx_20.png" alt="Xodx" /></a>
                 <div class="btn-group pull-right">
                     <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                         <?php if (count($this->notifications) > 0): ?>
@@ -42,38 +37,26 @@
                         <li class="divider"></li>
                         <li><a href="?c=application&amp;a=login">Login</a></li>
                         <li><a href="?c=application&amp;a=logout">Logout</a></li>
+                        <li><a href="?c=application&amp;a=newuser">Sign Up (Add User)</a></li>
                     </ul>
                 </div>
                 <div class="nav-collapse">
-                    <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span3">
-                <div class="well sidebar-nav">
                 <?php
                 foreach ($this->_menuFiles as $menuFile) {
                     include $menuFile;
                 }
                 ?>
-                </div>
-                </div>
-                <div class="span9">
-                <?php
-                foreach ($this->_contentFiles as $contentFile) {
-                    include $contentFile;
-                }
-                ?>
+                </div><!--/.nav-collapse -->
             </div>
         </div>
+    </div>
+
+    <div class="container">
+        <?php
+        foreach ($this->_contentFiles as $contentFile) {
+            include $contentFile;
+        }
+    ?>
     </div>
 
     <?php if (!empty($this->_debugLog)) : ?>
