--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand"><img src="resources/img/xodx_20.png" alt="Xodx" /></a>
+                <a class="brand"><img src="resources/img/xodx_20.png" alt="Xodx" title="[ˈɛksodʊs]" /></a>
                 <div class="btn-group pull-right">
                     <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                         <?php if (count($this->notifications) > 0): ?>
