Add some redirects for better useability

--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -16,5 +16,6 @@
 <div class="form-actions">
     <button class="btn btn-primary" type="submit">Login</button>
 </div>
+<p>If you don't have an account on this xodx node <a href="?c=application&a=newuser">you can create one</a>.</p>
 </fieldset>
 </form>
