--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" href="resources/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link type="text/css" href="resources/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link type="text/css" href="resources/css/all.css" rel="stylesheet" />
     <style type="text/css">
       @media (min-width: 980px) {
         body {
