--- a/templates/profileshow.phtml
+++ b/templates/profileshow.phtml
@@ -1,7 +1,7 @@
 <div class="profile row-fluid">
     <div class="span9">
         <h2>Profile of <?= $this->profileshowName ?><?php if(isset($this->profileshowNick)) : ?> (“<?= $this->profileshowNick ?>”)<?php endif; ?></h2>
-        <?php if(isset($this->profileshowDepiction)) : ?> <img class="avatar size128" src="<?= $this->profileshowDepiction ?>" /> <?php endif; ?>
+        <?php if(isset($this->profileshowDepiction)) : ?> <img class="avatar size128 img-polaroid" src="<?= $this->profileshowDepiction ?>" /> <?php endif; ?>
         <h3>Activities</h3>
         <?php if (isset($this->profileshowActivities) && count($this->profileshowActivities) > 0) : ?>
         <?php foreach ($this->profileshowActivities as $activity) : ?>
