Use new placeholder layout features of Saft

--- a/templates/person/show.phtml
+++ b/templates/person/show.phtml
@@ -51,7 +51,7 @@
         <hr />
         <?php
             $this->partial(
-                'templates/partials/friendlist.phtml',
+                'friendlist.phtml',
                 array('personUri' => $this->profileshowPersonUri, 'knows' => $this->profileshowKnows, 'addFriend' => false)
             );
         ?>
