--- a/templates/debug.phtml
+++ b/templates/debug.phtml
@@ -1,5 +1,8 @@
-<?php
-    if (isset($this->debugText)) {
-        echo $this->debugText;
-    }
-?>
+<?php if (!empty($this->log)) : ?>
+<div class="debug" id="debugConsole">
+    <h3>Debuglog:</h3>
+    <pre>
+    <?= $this->log ?>
+    </pre>
+</div>
+<?php endif; ?>
