--- a/templates/errorlayout.phtml
+++ b/templates/errorlayout.phtml
@@ -34,22 +34,11 @@
     </div>
 
     <div class="container">
-        <?php
-        foreach ($this->_contentFiles as $contentFile) {
-            include $contentFile;
-        }
-    ?>
+        <?php $this->placeholder('error'); ?>
     </div>
 
-    <?php if ($this->_debug && !empty($this->_debugLog)) : ?>
-
-    <div class="debug" id="debugConsole">
-        <h3>Debuglog:</h3>
-        <pre>
-<?= $this->_debugLog ?>
-        </pre>
-    </div>
-
+    <?php if ($this->has('debug')) : ?>
+    <?php $this->placeholder('debug'); ?>
     <?php endif; ?>
 </body>
 </html>
