--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -31,7 +31,7 @@
                 <a class="brand"><img src="resources/img/xodx_20.png" alt="Xodx" title="[ˈɛksodʊs]" /></a>
                 <?php
                     $this->partial(
-                        'templates/menu.phtml',
+                        'menu.phtml',
                         array('username' => $this->username, 'notifications' => $this->notifications)
                     );
                 ?>
@@ -40,22 +40,11 @@
     </div>
 
     <div class="container">
-        <?php
-        foreach ($this->_contentFiles as $contentFile) {
-            include $contentFile;
-        }
-    ?>
+        <?php $this->placeholder('main.content'); ?>
     </div>
 
-    <?php if ($this->_debug && !empty($this->_debugLog)) : ?>
-
-    <div class="debug" id="debugConsole">
-        <h3>Debuglog:</h3>
-        <pre>
-<?= $this->_debugLog ?>
-        </pre>
-    </div>
-
+    <?php if ($this->has('debug')) : ?>
+    <?php $this->placeholder('debug'); ?>
     <?php endif; ?>
 </body>
 </html>
