--- a/templates/user/home.phtml
+++ b/templates/user/home.phtml
@@ -93,7 +93,7 @@
         <hr />
         <?php
             $this->partial(
-                'templates/partials/friendlist.phtml',
+                'friendlist.phtml',
                 array('personUri' => $this->profileshowPersonUri, 'knows' => $this->profileshowKnows, 'addFriend' => true)
             );
         ?>
