--- a/templates/partials/friendlist.phtml
+++ b/templates/partials/friendlist.phtml
@@ -7,18 +7,20 @@
     </div>
 </form>
 <?php endif; ?>
-<?php foreach($this->knows as $contact) : ?>
-<address>
-    <?php
-        if ($contact['name'] != null) {
-            $name = $contact['name'];
-        } elseif ($contact['nick'] != null) {
-            $name = $contact['nick'];
-        } else {
-            $name = "unknown name";
-        }
-    ?>
-    <strong><?= $name ?></strong><br />
-    <a href="?c=person&amp;uri=<?= urlencode($contact['contactUri']) ?>"><?= $contact['contactUri'] ?></a>
-</address>
-<?php endforeach; ?>
+<?php if($this->knows !== null) : ?>
+    <?php foreach($this->knows as $contact) : ?>
+    <address>
+        <?php
+            if ($contact['name'] != null) {
+                $name = $contact['name'];
+            } elseif ($contact['nick'] != null) {
+                $name = $contact['nick'];
+            } else {
+                $name = "unknown name";
+            }
+        ?>
+        <strong><?= $name ?></strong><br />
+        <a href="?c=person&amp;uri=<?= urlencode($contact['contactUri']) ?>"><?= $contact['contactUri'] ?></a>
+    </address>
+    <?php endforeach; ?>
+<?php endif; ?>
