Fix friendlist to show friends again

--- a/templates/partials/friendlist.phtml
+++ b/templates/partials/friendlist.phtml
@@ -7,7 +7,7 @@
     </div>
 </form>
 <?php endif; ?>
-<?php if(isset($knows)) : ?>
+<?php if(isset($this->knows)) : ?>
     <?php foreach($this->knows as $contact) : ?>
     <address>
         <?php
