Fix html entity issue

--- a/templates/application/login.phtml
+++ b/templates/application/login.phtml
@@ -1,5 +1,5 @@
 <h2>Login</h2>
-<form action="?c=application&a=login" method="post" class="form-horizontal">
+<form action="?c=application&amp;a=login" method="post" class="form-horizontal">
 <fieldset>
 <div class="control-group">
     <label class="control-label" for="username">Username</label>
@@ -10,12 +10,12 @@
 <div class="control-group">
     <label class="control-label" for="password">Password</label>
     <div class="controls">
-        <input type="password"class="input-xlarge" name="password" id="password" /><br />
+        <input type="password" class="input-xlarge" name="password" id="password" /><br />
     </div>
 </div>
 <div class="form-actions">
     <button class="btn btn-primary" type="submit">Login</button>
 </div>
-<p>If you don't have an account on this xodx node <a href="?c=application&a=newuser">you can create one</a>.</p>
+<p>If you don't have an account on this xodx node <a href="?c=application&amp;a=newuser">you can create one</a>.</p>
 </fieldset>
 </form>
