--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -6,7 +6,7 @@
                 <span class="badge badge-info" title="<?php echo count($this->notifications) ?> Notifications"><?= count($this->notifications) ?></span>
             </a>
             <?php endif; ?>
-            <a href="?c=user&a=home" class="btn">
+            <a href="?c=user&amp;a=home" class="btn">
                 <i class="icon-user"></i> <?= $this->username ?>
             </a>
         </div>
