--- a/templates/user/home.phtml
+++ b/templates/user/home.phtml
@@ -52,46 +52,17 @@
                 </form>
             </div>
         </div>
-        <?php if (isset($this->profileshowActivities) && count($this->profileshowActivities) > 0) : ?>
-        <?php foreach ($this->profileshowActivities as $activity ) : ?>
-        <div class="activity well well-small">
-            <div class="row-fluid">
-                <form method="post" action="?c=activity&amp;a=replyForm" class="form-inline">
-                    <div class="span10">
-                        <a href="<?= htmlentities($activity['authorUri']) ?>"><?= htmlentities($activity['author']) ?></a>
-                        <?php if (isset($activity['objectType'])) : ?>
-                        <a  href="<?= htmlentities($activity['verb']) ?>"><span class="label label-important"><?= Saft_Tools::getSpokenWord($activity['verb']) ?></span></a>
-                        <?php if(isset($activity['objectContent'])) : ?>
-                        <a href="<?= htmlentities($activity['object']) ?>"><?= Saft_Tools::getSpokenWord($activity['objectContent']) ?></a><br />
-                        at <?= $activity['pubDate'] ?>
-                        <?php else : ?>
-                        <a href="<?= htmlentities($activity['object']) ?>"><?= htmlentities($activity['object']) ?></a><br>at <?= $activity['pubDate'] ?>
-                        <?php endif; ?>
-                        <?php else : ?>
-                        <a  href="<?= htmlentities($activity['verb']) ?>"><span class="label label-info"><?= Saft_Tools::getSpokenWord($activity['verb']) ?></span></a>
-                        <a  href="<?= htmlentities($activity['object']) ?>"> <?= Saft_Tools::getSpokenWord($activity['object']) ?></a><br>at <?= $activity['pubDate'] ?>
-                        <?php endif; ?>
-                    </div>
-                    <div class="span2">
-                        <input type="hidden" name="object" value="<?= htmlentities($activity['uri'])?>" />
-                        <input type="hidden" name="actor" value="<?= htmlentities($this->profileshowPersonUri) ?>" />
-                        <a class="btn btn-mini btn-block" href="?c=feed&amp;a=getFeed&amp;uri=<?= urlencode($activity['object']) ?>">Show Feed of Object</a>
-                        <button class="btn btn-mini btn-block" type="submit">Reply</button>
-                    </div>
-                    <?php if(isset($activity['objectImage'])) : ?>
-                        <div class="span10">
-                            <a href="<?= htmlentities($activity['object']) ?>"><img class="avatar size128 img-polaroid" src="<?= $activity['objectImage'] ?>"></img></a>
-                        </div>
-                    <?php endif; ?>
-                </form>
-            </div>
-        </div>
-        <?php endforeach; ?>
-        <?php else: ?>
-        <div class="alert alert-info">
-            You have no activities so far
-        </div>
-        <?php endif; ?>
+        <?php
+            $this->partial(
+                'activitystream.phtml',
+                array(
+                    'profileshowActivities' => $this->profileshowActivities,
+                    'profileshowPersonUri' => $this->profileshowPersonUri,
+                    'profileshowName' => $this->profileshowName,
+                    'home' => true
+                )
+            );
+        ?>
     </div>
     <div class="span3">
         <a class="btn btn-block" href="?c=feed&amp;a=getFeed&amp;uri=<?= urlencode($this->profileshowPersonUri) ?>">Show Activity Feed</a>
